# sbom-to-pdf

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/css/: styles.css
templates/: index.html
