[tool.poetry]
name = "sbom-flask"
version = "0.1.0"
description = ""
authors = ["Chace Prochazka <chace@designsbychace.com>"]
readme = "README.md"
packages = [{include = "sbom_flask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
reportlab = "^4.4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
